--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+nav.navbar.navbar-expand-lg.navbar-light.bg-light {
+    background-color: #80A9BE !important;
+}
+
+.bg-title{
+    color: white;
+    background-color: #708090;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.title {
+    margin-top: 20px !important;
+}
+
+body.mat-typography {
+    background-color: aliceblue;
+}
+
+.btn-action {
+    border-color: #890E54;
+    background-color: #890E54;
+    margin-bottom: 40px;
+}
+
+.btn-delete {
+    border-color: #890E54;
+    background-color: #890E54;
+}
+
+.btn-edit {
+    border-color: #708090;
+    background-color: #708090;
+}
+
+thead {
+    color: white;
+    background-color: #890E54;
+}
+
+.nav-link {
+    font-weight: bold;
+}
+
+.addupadte {
+    color: white;
+}
+
+.home-title {
+    margin-top: 200px;
+    color: #890E54;
+}
