--- a/src/app/addedittypeuser/addedittypeuser.component.html
+++ b/src/app/addedittypeuser/addedittypeuser.component.html
@@ -8,7 +8,7 @@
                 <div class="col">
                     <div class="row">
                         <mat-form-field appearance="fill">
-                            <input matInput formControlName="typeUser" placeholder="Enter a type user">
+                            <input matInput formControlName="type" placeholder="Enter a type user">
                         </mat-form-field>
                     </div>
                     <div class="row">
